<?xml version="1.0"?>
<package format="3">
  <name>tc_msgs</name>
  <version>9.1.3</version>
  <description>tc msg package</description>
  <maintainer email="seungchul0406@gmail.com">seungchul</maintainer>
  <license>MotionDevice</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
