<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tc_pio_hybrid</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yh@todo.todo">yh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <build_depend>tc_component</build_depend>
  <build_depend>tc_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
